rust/transpiler/tests/errors/duplicate_attribute_kinds.hyper
url: str
---

<div class="foo" class={url}>Content</div>
